--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
       text-align: center;
       margin-top: 20px;
     }
+    <meta property="og:title" content="It's Magic ✨">
+<meta property="og:description" content="Discover a magical surprise! Click to reveal.">
+<meta property="og:image" content="https://your-image-link-if-you-have-one.com/magic.png">
+<meta property="og:url" content="https://kewalneupane.github.io/its-magic/">
+<meta name="twitter:card" content="summary_large_image">
+
   </style>
 </head>
 <body>
